--- a/utils/object_detection_training_utils/docker/object_detection/Dockerfile
+++ b/utils/object_detection_training_utils/docker/object_detection/Dockerfile
@@ -15,6 +15,8 @@ RUN cd ~/Tensorflow/demo/images/ && \
     unzip test.zip && \
     unzip train.zip
 
+COPY docker_train.sh /
+
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 EXPOSE 6006
