--- a/utils/object_detection_training_utils/models/my_ssd/pipeline-fine-tune.config
+++ b/utils/object_detection_training_utils/models/my_ssd/pipeline-fine-tune.config
@@ -174,9 +174,9 @@ train_config {
       learning_rate {
         cosine_decay_learning_rate {
           learning_rate_base: 0.20000000298
-          total_steps: 50000
+          total_steps: 1000
           warmup_learning_rate: 0.0599999986589
-          warmup_steps: 2000
+          warmup_steps: 100
         }
       }
       momentum_optimizer_value: 0.899999976158
@@ -186,11 +186,21 @@ train_config {
   fine_tune_checkpoint: "pre-trained-models/ssd_mobilenet_v2_quantized_300x300_coco_2019_01_03/model.ckpt"
   from_detection_checkpoint: true
   load_all_detection_checkpoint_vars: true
-  num_steps: 100000
+  num_steps: 50000
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
   max_number_of_boxes: 100
   unpad_groundtruth_tensors: false
+  freeze_variables:
+        [ 'FeatureExtractor/MobilenetV2/Conv/',
+          'FeatureExtractor/MobilenetV2/expanded_conv/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_1/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_2/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_3/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_4/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_5/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_6/',
+          'FeatureExtractor/MobilenetV2/expanded_conv_7/']
 }
 train_input_reader {
   label_map_path: "annotations/label_map.pbtxt"
